--- a/DungeonSimulator.vcxproj.filters
+++ b/DungeonSimulator.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Исходные файлы\src</Filter>
     </ClCompile>
+    <ClCompile Include="src\World.cpp">
+      <Filter>Исходные файлы\src</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\World.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
