More flexible cellular automaton generation was added

--- a/DungeonSimulator.vcxproj
+++ b/DungeonSimulator.vcxproj
@@ -23,12 +23,14 @@
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\StaticEntity.cpp" />
+    <ClCompile Include="src\Treasure.cpp" />
     <ClCompile Include="src\World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\DynamicEntity.h" />
     <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\StaticEntity.h" />
+    <ClInclude Include="src\Treasure.h" />
     <ClInclude Include="src\World.h" />
     <ClInclude Include="src\Utilities.h" />
   </ItemGroup>
