Monsters are added to the map

--- a/DungeonSimulator.vcxproj
+++ b/DungeonSimulator.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\Generator.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Monster.cpp" />
     <ClCompile Include="src\StaticEntity.cpp" />
     <ClCompile Include="src\Treasure.cpp" />
     <ClCompile Include="src\World.cpp" />
@@ -31,6 +32,7 @@
     <ClInclude Include="src\DynamicEntity.h" />
     <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\Generator.h" />
+    <ClInclude Include="src\Monster.h" />
     <ClInclude Include="src\StaticEntity.h" />
     <ClInclude Include="src\Treasure.h" />
     <ClInclude Include="src\World.h" />
