--- a/DungeonSimulator.vcxproj.filters
+++ b/DungeonSimulator.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="src\Monster.cpp">
       <Filter>Исходные файлы\src</Filter>
     </ClCompile>
+    <ClCompile Include="src\Utilities.cpp">
+      <Filter>Исходные файлы\src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\DynamicEntity.h">
