--- a/DungeonSimulator.vcxproj.filters
+++ b/DungeonSimulator.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\Utilities.cpp">
       <Filter>Исходные файлы\src</Filter>
     </ClCompile>
+    <ClCompile Include="src\Adventurer.cpp">
+      <Filter>Исходные файлы\src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\DynamicEntity.h">
@@ -69,6 +72,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="src\Monster.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Adventurer.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
